tests/ui/traits/const-traits/const-drop-bound.stderr
error[E0277]: the trait bound `Foo<E>: ~const Destruct` is not satisfied
  --> $DIR/const-drop-bound.rs:23:9
   |
LL |     foo(res)
   |     --- ^^^
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/const-drop-bound.rs:9:61
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                             ^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
